<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueUnderW"
        tools:context=".Splash">

    <!-- BMI Logo Centered -->
    <ImageView
        android:id="@+id/bmi_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bmi_logo_description"
        android:src="@drawable/bmi_final"
        app:layout_constraintBottom_toTopOf="@id/bmi_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ImageContrastCheck" />

    <!-- App Title -->
    <TextView
        android:id="@+id/bmi_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/bmi_calculator"
        android:textColor="@color/purplePrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/bmi_logo"
        app:layout_constraintBottom_toTopOf="@id/welcome_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <!-- Welcome Subtitle -->
    <TextView
        android:id="@+id/welcome_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/welcome_to_bmi_calculator"
        android:textColor="@color/purplePrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/bmi_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>